# makefile-notes

./: Makefile  README.md  configure  vim.tip
10/: Makefile
2.3/: Makefile
3.5/: Makefile
3.6/: Makefile~
3.8/: GNUmakefile
3.9/: Makefile~
4.11/: Makefile
4.12/: Makefile
4.13/: Makefile
4.14/: Makefile  hello.sh
4.2/: Makefile~
4.4/: Makefile
4.5/: Makefile~
5.2/: Makefile
5.6/: Makefile
5.7/: Makefile
6.1/: Makefile
7.1/: Makefile
8/: Makefile
9/: Makefile
SpecialOject/: Makefile
VPATH/: Makefile
c_cpp/: Makefile
install/: Makefile~
learn_makefile/: Makefile  config.h  config.status
learn_makefile.ac/: configure.in
learn_makefile/autom4te.cache/: output.1  requests  traces.0  traces.1
learn_makefile/src/: Makefile  tt
mkdir/: Makefile
phony/: Makefile
test_hello/: README.md
